--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pig-react",
-  "version": "1.0.0",
-  "description": "packdescript",
+  "version": "1.0.1",
+  "description": "Arrange images in a responsive, progressive-loading grid managed in JavaScript using CSS transforms.",
   "author": "nickmcmillan",
   "license": "MIT",
   "repository": "nickmcmillan/pig-react",
@@ -23,8 +23,13 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "16.8.1",
+    "react-dom": "16.8.1"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
+    "react-spring": "^8.0.5"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
