--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pig-react",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Arrange images in a responsive, progressive-loading grid managed in JavaScript using CSS transforms.",
   "author": "nickmcmillan",
   "license": "MIT",
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cloudinary": "^1.13.2",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
