--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cli-progress": "^2.1.1",
     "cloudinary": "^1.13.2",
+    "color-thief-jimp": "^2.0.2",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
@@ -50,6 +52,7 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
+    "jimp": "^0.6.0",
     "minimist": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
