--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "standard",
-    "standard-react"
-  ],
+  "extends": [],
   "env": {
     "es6": true
   },
@@ -14,10 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
-    // don't force es6 functions to include space before paren
     "space-before-function-paren": 0,
-
-    // allow specifying true explicitly for boolean props
     "react/jsx-boolean-value": 0
   }
 }
