♻️ perf fixes. using resize/scroll instead of observer (which triggered events when initialised and ran too frequently)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "16.8.1"
   },
   "dependencies": {
-    "react-resize-observer": "^1.1.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "react-spring": "^8.0.5"
   },
   "devDependencies": {
