--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pig-react",
-  "version": "1.0.12",
+  "name": "react-pig",
+  "version": "1.0.13",
   "description": "Arrange images in a responsive, progressive-loading grid managed in JavaScript using CSS transforms.",
   "author": "nickmcmillan",
   "license": "MIT",
-  "repository": "nickmcmillan/pig-react",
+  "repository": "nickmcmillan/react-pig",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
