--- a/package.json
+++ b/package.json
@@ -39,9 +39,6 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cli-progress": "^2.1.1",
-    "cloudinary": "^1.13.2",
-    "color-thief-jimp": "^2.0.2",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
     "eslint-plugin-import": "^2.13.0",
@@ -49,21 +46,16 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.10.0",
     "gh-pages": "^1.2.0",
-    "jimp": "^0.6.0",
-    "jsonfile": "^5.0.0",
-    "minimist": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
-    "recursive-readdir": "^2.2.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0",
-    "sharp": "^0.21.3"
+    "rollup-plugin-url": "^1.4.0"
   },
   "files": [
     "dist"
