--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-scripts": "^1.1.4",
-    "react-pig": "link:.."
+    "pig-react": "link:.."
   },
   "scripts": {
     "start": "react-scripts start",
