[FIX] Version of React does not matter

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": "16.8.1",
-    "react-dom": "16.8.1"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   },
   "dependencies": {
     "es-abstract": "1.18.3",
