--- a/example/package.json
+++ b/example/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "link:../node_modules/react",
-    "react-dom": "link:../node_modules/react-dom",
+    "react": "file:../node_modules/react",
+    "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "^1.1.4",
-    "pig-react": "link:.."
+    "pig-react": "file:.."
   },
   "scripts": {
     "start": "react-scripts start",
